# solana-anchor-demo

./: .gitignore
client/: Cargo.toml
client-m/: Cargo.toml  README.md
client-m/idls/: nft.json  token.json
client-m/src/: main.rs
client/idls/: counter.json
client/src/: main.rs
counter/: Anchor.toml
counter/programs/counter/: Cargo.toml
counter/programs/counter/src/: lib.rs
nft/: Anchor.toml
nft/programs/nft/: Cargo.toml
nft/programs/nft/src/: lib.rs
token/: Anchor.toml
token/programs/token/: Cargo.toml
token/programs/token/src/: lib.rs
token/tests/: token.ts
