[package]
name = "counter"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "counter"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
# anchor-lang = "0.28.0"
# solana-program = "2.2.1"
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
# anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
# anchor-spl = { version = "0.29.0", features = ["metadata"] }
# solana-program = "1.16.24"
solana-program = "2.2.1"
# spl-token = "4.0.0"